# pyrs_str

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  main.py  pyproject.toml
lab/: info.ipynb  str.ipynb
src/: lib.rs  lib_str.rs
tests/: test_pyrs_str.py
