[project]
name = "pyrs-str"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "isort>=8.0.0",
    "jupyterlab>=4.5.5",
    "jupyterlab-code-formatter>=3.0.3",
    "maturin>=1.12.4",
    "pytest>=9.0.2",
]

[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
